--- a/release/index.html
+++ b/release/index.html
@@ -5,6 +5,7 @@
     <title>Alpha</title>
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bower_components/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="/bower_components/datetimepicker/dist/DateTimePicker.min.css">
     <link rel="stylesheet" href="/css/app.min.css">
   </head>
   <body>
@@ -21,6 +22,7 @@
     <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/bower_components/angular-validation/dist/angular-validation.min.js"></script>
     <script src="/bower_components/angular-validation/dist/angular-validation-rule.min.js"></script>
+    <script src="bower_components/datetimepicker/dist/DateTimePicker.min.js"></script>
     <script src="/bower_components/taffydb/taffy-min.js"></script>
     <script src="/bower_components/bootstrap/js/affix.js"></script>
     
