--- a/src/js/sekolah/home/sekolah-home.html
+++ b/src/js/sekolah/home/sekolah-home.html
@@ -1,4 +1,4 @@
-<div class="pagehead pagehead-bordered">
+<div class="pagehead pagehead-bordered hidden-print">
     <div class="container">
         <h1>Sekolah</h1>
         <!-- <section class="">
@@ -36,7 +36,7 @@
             </div>
 
         </div>
-        
+
     </div>
 
 </div>
