Add fitter upload file

--- a/release/index.html
+++ b/release/index.html
@@ -19,6 +19,7 @@
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="/bower_components/angular-file-upload/angular-file-upload.min.js"></script>
     <script src="/bower_components/angular-validation/dist/angular-validation.min.js"></script>
     <script src="/bower_components/angular-validation/dist/angular-validation-rule.min.js"></script>
     <script src="bower_components/datetimepicker/dist/DateTimePicker.min.js"></script>
