--- a/src/js/sekolah/pendaftaran/sekolah-home.cetak.html
+++ b/src/js/sekolah/pendaftaran/sekolah-home.cetak.html
@@ -16,6 +16,11 @@
             <td>{{ sekolah.npsn }} / {{ sekolah.nss }}</td>
         </tr>
         <tr>
+            <td>Kode registerasi</td>
+            <td>:</td>
+            <td>{{ sekolah.kode }}</td>
+        </tr>
+        <tr>
             <td>Alamat</td>
             <td>:</td>
             <td>
