--- a/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
+++ b/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
@@ -4,7 +4,7 @@
     Pendaftaran berhasil dilakukan.
 </div>
 <div class="alert alert-danger" ng-show="error">
-    Pendaftaran gagal dilakukan.
+    Pendaftaran gagal dilakukan. Reload browser yang anda gunakan dan coba kembali.
 </div>
 
 
