--- a/src/js/sekolah/biodata/sekolah-home.biodata.html
+++ b/src/js/sekolah/biodata/sekolah-home.biodata.html
@@ -9,6 +9,13 @@
 </style>
 
 <form name="Form" role="form">
+<div ng-show="success" class="alert alert-info">
+    Proses penyimpanan berhasil
+</div>
+<div ng-show="error" class="alert alert-danger">
+    Proses penyimpanan gagal dilakukan
+</div>
+
 <ul class="list-group">
     <li class="list-group-item">
         <h4>BIODATA SEKOLAH/MADRASAH</h4>
@@ -329,7 +336,7 @@
         </h4>
     </li>
     <li class="list-group-item">
-        <div ng-hide="sekolah.status == 'N'">
+        <div> <!--  ng-hide="sekolah.status == 'N'" -->
             <div class="row">
                 <div class="col-md-9">
                     <div class="form-group">
@@ -339,7 +346,6 @@
                             class="form-control no-bordered"
                             ng-model="sekolah.yayasan.nama"
                             placeholder="Nama yayasan"
-                            validator="required"
                             required-error-message="Harus di isi"
                             valid-method="blur"
                             message-id="yayasan-nama"
@@ -358,7 +364,6 @@
                             ng-model="sekolah.yayasan.alamat"
                             rows="5"
                             placeholder="Alamat yayasan"
-                            validator="required"
                             required-error-message="Harus di isi"
                             valid-method="blur"
                             message-id="yayasan-alamat"></textarea>
@@ -374,7 +379,6 @@
                             name="yayasan-akte-nomor"
                             class="form-control no-bordered"
                             ng-model="sekolah.yayasan.akte_no"
-                            validator="required"
                             required-error-message="Harus di isi"
                             placeholder="Nomor akte yayasan"
                             message-id="yayasan-akte-nomor"
@@ -401,7 +405,6 @@
                             class="form-control no-bordered"
                             ng-model="sekolah.yayasan.akte_notaris"
                             placeholder="Nama notaris"
-                            validator="required"
                             required-error-message="Harus di isi"
                             valid-method="blur"
                             message-id="yayasan-akte-notaris"
@@ -419,7 +422,7 @@
                             class="form-control no-bordered"
                             ng-model="sekolah.yayasan.telepon"
                             placeholder="Telepon yayasan"
-                            validator="required, numeric"
+                            validator="numeric"
                             required-error-message="Harus di isi"
                             numeric-error-message="Harus angka"
                             message-id="yayasan-telepon"
