Add template chache

--- a/release/index.html
+++ b/release/index.html
@@ -26,6 +26,7 @@
     <script src="/bower_components/taffydb/taffy-min.js"></script>
     <script src="/bower_components/bootstrap/js/affix.js"></script>
 
+    <script src="/js/templates.js"></script>
     <script src="/js/instrumen.js"></script>
     <script src="/js/daerah.js"></script>
     <script src="/js/program.js"></script>
