Notif upload file

--- a/release/index.html
+++ b/release/index.html
@@ -11,6 +11,14 @@
 
     <base href="/">
 
+    <div  class="notifbar notifbar-info hide">
+      <div class="container">
+
+      </div>
+    </div>
+    <div class="loading-bar"></div>
+    <div class="message-bar"></div>
+
     <div ui-view></div>
 
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
