--- a/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
+++ b/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
@@ -51,6 +51,13 @@
     </div>
 </div>
 
+
+<div class="control-label"
+    style="border-bottom: 1px solid #ddd;
+        padding-bottom: 10px; margin: 40px 0 10px 0">
+    INFORMASI PENDAFTAR
+</div>
+
 <form name="Form" role="form">
 <div class="">
     <div class="form-grop">
