working on bugs pengajuan

--- a/src/js/sekolah/home/sekolah-home.index.html
+++ b/src/js/sekolah/home/sekolah-home.index.html
@@ -29,7 +29,7 @@
                     ng-model="token"
                     validator="required"
                     required-error-message="Token tidak boleh kosong"
-                    placeholder="Token"
+                    placeholder="Token atau kode registrasi"
                     message-id="token">
 			</div>
 		</form>
