--- a/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
+++ b/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
@@ -120,7 +120,7 @@
                 <td>{{ sekolah.created_at  }}</td>
             </tr>
             <tr>
-                <td>Kode Pendaftaran</td>
+                <td>Kode Pendaftaran atau token</td>
                 <td>:</td>
                 <td>{{ sekolah.kode }}</td>
             </tr>
@@ -137,7 +137,8 @@
         </tbody>
     </table>
 
-    <a ui-sref="sekolah-home.cetak" role="button" class="btn btn-primary">Cetak bukti pendaftaran</a>
+    <a ui-sref="sekolah-home.cetak" role="button" class="btn btn-primary">Lihat dalam HTML</a>
+    <a href="//api.bap-sm.or.id/pengajuan/{{ sekolah.kode }}/print" role="button" class="btn btn-primary">Lihat dalam PDF</a>
 </div>
 
 <hr />
