--- a/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
+++ b/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
@@ -138,7 +138,7 @@
     </table>
 
     <a ui-sref="sekolah-home.cetak" role="button" class="btn btn-primary">Lihat dalam HTML</a>
-    <a href="//api.bap-sm.or.id/pengajuan/{{ sekolah.kode }}/print" role="button" class="btn btn-primary">Lihat dalam PDF</a>
+    <a href="//api.bap-sm.or.id/pengajuan/{{ sekolah.kode }}/print" target="_blank" role="button" class="btn btn-primary">Lihat dalam PDF</a>
 </div>
 
 <hr />
